# nbody-mpi

./: CMakeLists.txt  Cell.cpp  Cell.h  Particle.cpp  Particle.h  SerializedCell.cpp  SerializedCell.h  common.cpp  common.h  main.cpp  theory
shaders/: FragmentShader.fs.glsl  VertexShader.vs.glsl
